--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -34,45 +34,102 @@
     justify-content: center;
 }
 
-.youtube_image:hover{
-    background-color: black;
+.youtube_link{
+    width: 700px;
+}
+
+.youtube_image:hover>.youtube_link{
+    filter: brightness(0.5);
+    transition: all 0.3s;
 }
 
 .alnico_product{
     background-color: #9e0707;
     color: ghostwhite;
     width: 100%;
+    display: flex;
     justify-content: center;
     flex-direction: column;
+    font-family: "맑은고딕";
 }
 
-.product_content1{
+.product_content{
     width: 100%;
     flex-direction: row;
     align-items: center;
 }
 
-.product_content1-1{
+.product_content_left{
     width: 50%;
     float: left;
+    height: 500px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
-.product_content1-2{
+.product_content_right{
     width: 50%;
     float: right;
     justify-content: center;
+    height: 500px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
-.auto_image{
-    background-image: url("../images/pack_system.png");
-    width: 480px;
-    height: 250px;
-    margin-top: 200px;
+.auto_system_image{
+    transition: all .3s;
+    margin: 0 auto;margin-top: 150px; 
+    width: 80%; 
+    height: 250px; 
+    background: url(../images/auto_system.png) no-repeat center center/100%;
     
 }
 
-.auto_image:hover{
+.auto_system_image:hover{
+    background-image: url("../images/auto_system_color.png");
+    transition: all 0.3s;
+}
+
+.pack_system_image{
+    transition: all .3s;
+    margin: 0 auto;
+    margin-top:0px; 
+    width: 80%; 
+    height: 321px; 
+    background: url(../images/pack_system.png) no-repeat center center/100%;
+}
+
+.pack_system_image:hover{
     background-image: url("../images/pack_system_color.png");
-    width: 480px;
-    height: 250px;
+    transition: all 0.3s;
+}
+
+.label_print_image{
+    transition: all .3s;
+    margin: 0 auto;
+    /* margin-top: 100px;  */
+    width: 40%; 
+    height: 280px; 
+    background: url(../images/label_print.png) no-repeat center center/60%;
+}
+
+.label_print_image:hover{
+    background-image: url("../images/label_print_color.png");
+}
+
+.font_top{
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: mintcream;
+    margin: 0;
+    margin-top: 10px;
+}
+
+.font_bottom{
+    font-size: 1.0rem;
+    font-weight: 500;
+    color: mintcream;
+    margin-top: 10px;
 }
