--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -2,22 +2,13 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    overflow-x: auto;
     width: 100vw;
     height: 100vh;
     background-color: white;
     min-width: 1200px;
-}
-
-.top_bar{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-    /* min-width: 1200px; */
+    padding: 0;
+    margin: 0;
 }
 
 .youtube_banner{
@@ -71,7 +62,6 @@
 .product_content_right{
     width: 50%;
     float: right;
-    justify-content: center;
     height: 500px;
     margin-top: 100px;
     display: flex;
@@ -81,7 +71,7 @@
 .auto_system_image{
     transition: all .3s;
     margin: 0 auto;margin-top: 150px; 
-    width: 80%; 
+    width: 480px; 
     height: 250px; 
     background: url(../images/auto_system.png) no-repeat center center/100%;
     
@@ -96,7 +86,7 @@
     transition: all .3s;
     margin: 0 auto;
     margin-top:0px; 
-    width: 80%; 
+    width: 480px; 
     height: 321px; 
     background: url(../images/pack_system.png) no-repeat center center/100%;
 }
@@ -110,7 +100,7 @@
     transition: all .3s;
     margin: 0 auto;
     /* margin-top: 100px;  */
-    width: 40%; 
+    width: 480px; 
     height: 280px; 
     background: url(../images/label_print.png) no-repeat center center/60%;
 }
@@ -120,16 +110,27 @@
 }
 
 .font_top{
-    font-size: 1.3rem;
-    font-weight: 800;
+    font-size: 1.8rem;
+    font-weight: 600;
     color: mintcream;
     margin: 0;
     margin-top: 10px;
+    font-family: 'NotoKr','Malgun Gothic','맑은 고딕',Dotum,'돋움',Helvetica,AppleSDGothicNeo,sans-serif;
 }
 
 .font_bottom{
-    font-size: 1.0rem;
+    font-size: 1.4rem;
     font-weight: 500;
     color: mintcream;
     margin-top: 10px;
+}
+
+.alnico_map{
+    width: 100%;
+    height: 710px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+    padding-top: 80px;
 }
