--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,19 +1,9 @@
-/* .top_bar{
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.85);
-    position: fixed;
-    align-items: center;
-    justify-content:center;
-} */
 @charset "UTF-8";
 
 *{margin: 0; padding: 0; border: none; outline: none; box-sizing: border-box;}
 
 html{font-size: 10px;}
-body{overflow-x: hidden; font-family:'NotoKr','Malgun Gothic','맑은 고딕',Dotum,'돋움',Helvetica,AppleSDGothicNeo,sans-serif; background-color: black;}
+body{overflow-x: auto; font-family:'NotoKr','Malgun Gothic','맑은 고딕',Dotum,'돋움',Helvetica,AppleSDGothicNeo,sans-serif; background-color: black;}
 
 a{width: 100%; height: 100%; display: block; text-decoration: none; color: black;}
 ul,li{list-style: none;}
@@ -59,7 +49,7 @@ button{cursor: pointer;}
 #header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(3){margin-left: -15px;}
 
 
-#header .lnb{width: 100%; color: transparent;}
+#header .lnb{width: 100%; color: transparent; min-width: 1200px;}
 #header .lnb .menu{width: 1200px; margin: 0 auto; padding-left: 234px;}
 #header .lnb h2{font-size: 0;}
 
@@ -127,3 +117,8 @@ button{cursor: pointer;}
 
 
 /*header&sitemap 끝*/
+
+/* @media screen and (max-width:1280px) {
+    #header .lnb .menu .depth1 .depth1_list .depth1_item{display: none;}
+    #header .lnb .menu .depth1 .depth1_list .depth1_item:last-child{display:block; left: 200px;}
+} */
