--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,3 +1,14 @@
+.top_bar{
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100px;
+    background-color: rgba(0, 0, 0, 0.85);
+    position: fixed;
+    align-items: center;
+    justify-content:center;
+}
+
 .main_container{
     display: flex;
     flex-direction: column;
@@ -9,6 +20,11 @@
     min-width: 1200px;
     padding: 0;
     margin: 0;
+}
+
+.main_image{
+    width: auto;
+    height: 800px;
 }
 
 .youtube_banner{
@@ -133,4 +149,10 @@
     align-items: center;
     background-color: black;
     padding-top: 80px;
+}
+
+@media screen and (max-width:400px) {
+    /* .main_container{
+        min-width: 0;
+    } */
 }
