--- a/src/css/header.css
+++ b/src/css/header.css
@@ -31,22 +31,22 @@ button{cursor: pointer;}
 
 
 
-#header .header_top .gnbbox{width: 35px; height: 67px; position: absolute; top: 20px; right: 100px; line-height: 67px;}
+#header .gnbbox{width: 35px; height: 67px;float: left; position: relative; top: 20px; right: 100px; line-height: 67px;}
 
-#header .header_top .gnbbox .gnbLBox{width: 100%; height: 100%;}
+#header .gnbbox .gnbLBox{width: 100%; height: 100%;}
 
-#header .header_top .gnbbox .gnbLBox .sitebox{width: 100%; height: 100%;}
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn{width: 100%; height: 100%; position: relative; cursor: pointer; top: -5px;}
+#header .gnbbox .gnbLBox .sitebox{width: 100%; height: 100%;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn{width: 100%; height: 100%; position: absolute; cursor: pointer; top: -5px;}
 
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn span{width: 34px; height: 3px; background-color: white; position: absolute; left: 50%; margin-left: -17px; margin-top: -1.5px; transition: all .3s;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn span{width: 34px; height: 3px; background-color: white; position: absolute; left: 50%; margin-left: -17px; margin-top: -1.5px; transition: all .3s;}
 
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn span:nth-child(1){top: 30%;}
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn span:nth-child(2){top: 50%;}
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn span:nth-child(3){top: 70%;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn span:nth-child(1){top: 30%;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn span:nth-child(2){top: 50%;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn span:nth-child(3){top: 70%;}
 
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(1){margin-left: -10px;}
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(2){margin-left: -25px;}
-#header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(3){margin-left: -15px;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(1){margin-left: -10px;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(2){margin-left: -25px;}
+#header .gnbbox .gnbLBox .sitebox .sitemap_btn:hover span:nth-child(3){margin-left: -15px;}
 
 
 #header .lnb{width: 100%; color: transparent; min-width: 1200px;}
@@ -59,14 +59,14 @@ button{cursor: pointer;}
 	height: 100px; line-height: 100px; 
 	text-shadow: 0 0 1px gray;
 }
-#header .lnb .menu .depth1 .depth1_list .depth1_item:last-child{margin-top:25px; width: 150px; height: 50px; border-radius: 50px; background: red;}
-#header .lnb .menu .depth1 .depth1_list .depth1_item .depth1_text:last-child{
+/* #header .lnb .menu .depth1 .depth1_list .depth1_item:last-child{margin-top:25px; width: 150px; height: 50px; border-radius: 50px; background: red;} */
+/* #header .lnb .menu .depth1 .depth1_list .depth1_item .depth1_text:last-child{
 	color: white; 
     text-shadow: 0 0 1px gray;
     line-height: 50px;
 }
 
-#header .lnb .menu .depth1 .depth1_list .depth1_item:last-child:hover{transition: all 0.3s; background: rgb(173, 0, 0);}
+#header .lnb .menu .depth1 .depth1_list .depth1_item:last-child:hover{transition: all 0.3s; background: rgb(173, 0, 0);} */
 
 #header .lnb .menu .depth1 .depth1_item .depth2{
 	display: none; 
