--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,5 +1,5 @@
 /* 1280px ~ 1599px 일 때 레이아웃 */
-@media screen and (min-width:1280px) and (max-width:1599px){
+ @media screen{ /*and (min-width:1280px) and (max-width:1599px){ */
 
     header{position: relative; width:100%; height:100px;}
     
@@ -9,9 +9,9 @@
     /*    header 영역 스타일*/  
     #header .header_top .logo{width: 200px; height: 68px; position: absolute; top: 25px; left: 45px;}
 
-    #header .header_top .gnbbox{width: 35px; height: 67px; position: absolute; top: 20px; right: 45px; line-height: 67px;}
+    #header .gnbbox{width: 35px; height: 67px; position: relative; float: right; top: -77px; right: 15px; line-height: 67px;}
 
-    #header .header_top .gnbbox .gnbLBox .sitebox .sitemap_btn{width: 100%; height: 100%; position: relative; cursor: pointer; top: -5px;}
+    #header .gnbbox .gnbLBox .sitebox .sitemap_btn{width: 50%; height: 100%; position: relative; cursor: pointer; top: -5px;}
 
     #header .lnb .menu{width: 1100px; margin: 0 auto; padding-left: 180px;}
     #header .lnb .menu .depth1 .depth1_list .depth1_item{float: left; width: 20%; text-align: center; position: relative;}
@@ -29,7 +29,7 @@
 
 /* 1024px ~ 1279px 일 때 레이아웃 */
 
-@media screen and (min-width:1150px) and (max-width:1279px){
+/* @media screen and (min-width:1150px) and (max-width:1279px){
 
     header{ 
         position: relative; width: 100%; height: 100px;
@@ -38,13 +38,13 @@
     #header .lnb .menu{width: 1100px; margin: 0 auto; padding-left: 350px;}
     #header .lnb .menu .depth1 .depth1_list .depth1_item:last-child{display: none;}
 
-}
+} */
 
 
 /* 780px ~ 1023px 일 때 레이아웃 */
 /* 컨텐츠 박스(article) 중 중요도가 떨어지는 내용은 숨김(display: none)*/
 
-@media screen and (min-width:780px) and (max-width:1149px){
+/* @media screen and (min-width:780px) and (max-width:1149px){
 
     header{
         position: relative; width:100%; height:100px;
@@ -56,12 +56,12 @@
     #header .lnb .menu .depth1 .depth1_list .depth1_item{display: none;}
 
 
-}
+} */
 
 
 
 /*640px ~ 779px 일 때 레이아웃 */
-@media screen and (min-width:640px) and (max-width:779px){
+/* @media screen and (min-width:640px) and (max-width:779px){
 
     header{
         position: relative; width:100%; height:100px;
@@ -72,14 +72,14 @@
     }
     #header .lnb .menu .depth1 .depth1_list .depth1_item{display: none;}
     
-}
+} */
 
 
 
 
 /*480px ~ 639px 일 때 레이아웃 */
 
-@media screen and (min-width:480px) and (max-width:639px){
+/* @media screen and (min-width:480px) and (max-width:639px){
 
     header{position: relative; width:100%; height:140px;}
     section{width: 100%; margin-left: 0;}
@@ -95,16 +95,16 @@
 		#gnb의 position변경 및 배치,
 		#gnb>li의 너비는 100% / 메뉴개수(4개)= 25%,
 		.snsSet 숨김
-    */
+    
 
     
-}
+} */
 
 
 /*479px 이하 일 때 레이아웃 */
 /*  아이폰 3GS/4/4S/5  */
 
-@media screen and (max-width:479px){
+/* @media screen and (max-width:479px){
 
     header{position: fixed; width: 100%; height: 55px; background-color: transparent; z-index: 10;}
     section{width:100%; margin-left: 0; margin-top: 55px; z-index: 5;}
@@ -120,6 +120,6 @@
     #gnb>li 제거,
     #gnb>li>a에 효과적용.
     .snsSet숨김.
-	*/
+	
    
-}
+}*/
